# datafun-06-eda

./: PROJECT_LOG.md  README.md  environment.yml  mims.py  mkdocs.yml  pyproject.toml  requirements.txt
docs/: dataset.md  index.md  notebook.md  setup.md
notebooks/: tmims_eda.ipynb
site/: 404.html  index.html
site/dataset/: index.html
site/notebook/: index.html
site/search/: search_index.json
site/setup/: index.html
src/datafun_06_eda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_smoke.py
