[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datafun-06-eda"
version = "0.1.0"
description = "Exploratory data analysis project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pip",
  "setuptools",
  "wheel",
  "loguru",
  "pyttsx3",
  "ipython",
  "jupyter",
  "ipykernel",
  "ipywidgets",
  "nbdime",
  "jupyterlab-git",
  "matplotlib==3.9.2",
  "seaborn==0.13.2",
]
